# mvc-demo

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
cmake/: CPack.cmake  DeployQt.cmake
resources/: win.rc
resources/icon/: icon.icns
src/: CMakeLists.txt  config.h.in  main.cpp
src/core/: Controller.cpp  Controller.hpp
src/models/: BubbleSort.cpp  BubbleSort.hpp  CMakeLists.txt  GenerateNum.cpp  GenerateNum.hpp  QuickSort.cpp  QuickSort.hpp
src/models/Node/: SortBubble.h  SortGenerate.h  SortQuick.h
src/models/Param/: MyParam.h
src/ui/: MainWindow.cpp  MainWindow.hpp
src/ui/components/: ListBox.cpp  ListBox.hpp
